--- a/client/src/components/CSS/NavBar.module.css
+++ b/client/src/components/CSS/NavBar.module.css
@@ -1,15 +1,39 @@
 .nav{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-end;
+    align-items: center;
+    
+    height: 2em;
+    width: 100%;
+    background-image: linear-gradient(to right, #007bff, #00bcd4, #4caf50);
 }
 
 .buttons{
     display: flex;
     flex-direction: row;
+    justify-content:center;
+    width: 30%;
+}
+
+.link{
+    margin-left: 12px;
+    margin-right: 12px;
+    font-size: larger;
+    text-decoration: none;
+    color: #000;
+}
+
+link.active{
+    background-color: transparent;
+    color: #000
 }
 
 .searchBar{
-    padding: 4rem;
-    margin: 20px;
+    display: flex;
+    justify-content: center;
+    width: 30%;
+    height: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
