--- a/client/src/components/CSS/Card.module.css
+++ b/client/src/components/CSS/Card.module.css
@@ -1,18 +1,44 @@
-.cardContainer {
-    width: 300px;
-    padding-top: 5rem;
-    text-align: center;
-    background-color: brown;
-    margin: 1rem
+.navLink {
+  text-decoration: none;
 }
 
-.imagen{
-    width: 250px;
-    height: 175px;
-    overflow: hidden;
+.cardContainer {
+  width: 300px;
+  height: 225px; /* Relación de aspecto 4:3 (1600x1200) */
+  text-align: center;
+  background-color: #1e1e1e;
+  margin: 1rem;
+  border-radius: 20px;
 
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+.cardContainer:hover {
+  border-color: #646cff;
+}
+
+.cardContainer:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+.imagen {
+  width: 80%;
+  height: 80%;
+  padding-top: 5px;
+  object-fit: cover;
+  border-radius: 15px;
 }
 
 .nombre {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
+  color: #e1e1e1;
 }
