--- a/client/src/components/CSS/Cards.module.css
+++ b/client/src/components/CSS/Cards.module.css
@@ -1,5 +1,6 @@
 .cardsContainer{
-    border: 1px solid black
+    border: 1px solid black;
+    background-color: #121212;
 }
 
 .cards{
@@ -16,6 +17,7 @@
     height: 30px;
     align-items: center;
     padding-top: 10px;
+    color: #E1E1E1
 }
 
 .options{
