--- a/client/src/components/CSS/NavBar.module.css
+++ b/client/src/components/CSS/NavBar.module.css
@@ -1,39 +1,68 @@
-.nav{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    
-    height: 2em;
-    width: 100%;
-    background-image: linear-gradient(to right, #007bff, #00bcd4, #4caf50);
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+
+  height: 3em;
+  width: 100%;
+  background-color: #1e1e1e;
 }
 
-.buttons{
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    width: 30%;
+.link {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  margin-left: 12px;
+  margin-right: 12px;
+  text-decoration: none;
+  color: #e1e1e1;
+}
+.link:hover {
+  border-color: #646cff;
+}
+.link:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
-.link{
-    margin-left: 12px;
-    margin-right: 12px;
-    font-size: larger;
-    text-decoration: none;
-    color: #000;
+
+link.active {
+  background-color: transparent;
+  color: #e1e1e1;
 }
 
-link.active{
-    background-color: transparent;
-    color: #000
+.searchBar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+  height: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
-.searchBar{
-    display: flex;
-    justify-content: center;
-    width: 30%;
-    height: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+/* button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
+.navLink:hover {
+  border-color: #646cff;
+}
+.navLink:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+} */
