--- a/client/src/components/CSS/Card.module.css
+++ b/client/src/components/CSS/Card.module.css
@@ -6,11 +6,10 @@
   width: 300px;
   height: 225px; /* Relación de aspecto 4:3 (1600x1200) */
   text-align: center;
-  background-color: #1e1e1e;
+  background-color: rgb(0, 0, 0, 0.7);
   margin: 1rem;
-  border-radius: 20px;
+  border-radius: 50px 50px 50px 50px;
 
-  border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
