--- a/client/src/components/CSS/Cards.module.css
+++ b/client/src/components/CSS/Cards.module.css
@@ -1,6 +1,6 @@
 .cardsContainer{
     border: 1px solid black;
-    background-color: #121212;
+    background-color: rgb(0, 0, 0, 0.3);
 }
 
 .cards{
