--- a/client/src/components/CSS/LandingPage.module.css
+++ b/client/src/components/CSS/LandingPage.module.css
@@ -1,29 +1,44 @@
+.background{
+  display: flex;
+  justify-content: center;
+  background-image: url('landingIMG.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  
+}
 .landingContainer{
-    width: 90%;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: self-start;
+  display: flex;
+  margin-top: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items:center;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  border-radius: 200px;
+  color: rgba(245, 244, 244, 0.84);
+  max-width: 500px;
+  max-height: 220px;
 }
 
 .landingButton {
-    border-radius: 8px;
+    border-radius: 50px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
+    background-color: #880a0ad5;
     cursor: pointer;
     transition: border-color 0.25s;
-    margin-left: 12px;
-    margin-right: 12px;
     text-decoration: none;
-    color: #e1e1e1;
+    color: #f2ae00;
+    margin-top: 1em;
   }
   .landingButton:hover {
-    border-color: #646cff;
+    border-color: #21562b;
   }
   .landingButton:focus,
   button:focus-visible {
@@ -31,7 +46,15 @@
   }
   
   
-  landingButton.active {
+  .landingButton.active {
     background-color: transparent;
     color: #e1e1e1;
   }
+
+  .p{
+    max-width: 70%;
+    top: 230px;
+    text-align: center;
+    
+  }
+
