--- a/client/src/components/CSS/NavBar.module.css
+++ b/client/src/components/CSS/NavBar.module.css
@@ -6,23 +6,24 @@
 
   height: 3em;
   width: 100%;
-  background-color: #1e1e1e;
+  background-color: rgb(0, 0, 0, 0.8)
 }
 
 .link {
-  border-radius: 8px;
+  border-radius: 50px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.24em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-  margin-left: 12px;
-  margin-right: 12px;
+  margin-left: 58px;
+  margin-right: 58px;
   text-decoration: none;
   color: #e1e1e1;
+  
 }
 .link:hover {
   border-color: #646cff;
@@ -33,19 +34,18 @@ button:focus-visible {
 }
 
 
-link.active {
+.link.active {
   background-color: transparent;
   color: #e1e1e1;
 }
 
 .searchBar {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   width: 30%;
   height: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
+  
 }
 
 /* button {
