--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,9 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  
+  min-width: 100vh;
+  min-height: 100vh;
   font-weight: 400;
-
+  display:flex;
  
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -15,13 +16,17 @@
 body {
   width: 100%;
   height: 100%;
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
-  min-width: 320px;
+  min-width: 100vh;
   min-height: 100vh;
-  width: 100%;
-  height: 100%
+  max-height: 100vh;
+  margin-top: 0.5em;
+  background-image: url('pxfuel.jpg');
+  background-repeat:repeat-y;
+  background-position: center;
+  background-size: cover;
 }
 
 
