--- a/client/src/components/CSS/Paginate.module.css
+++ b/client/src/components/CSS/Paginate.module.css
@@ -1,8 +1,41 @@
-.paginate{
+.container {
     display: flex;
     justify-content: center;
-    gap: 2rem;
+    margin-top: 20px;
+  }
+  
+  .paginate {
+    display: flex;
     align-items: center;
-    padding: 4rem 0;
-
-}
+    justify-content: space-between;
+    width: 200px;
+    padding: 10px;
+  }
+  
+  .buttons {
+    padding: 5px 10px;
+    font-size: 14px;
+    border: 1px solid black;
+    background-color: rgba(80, 0, 0, 0.934);
+    border-radius: 200px;
+    color: #fff;
+    
+    cursor: pointer;
+  }
+  
+  .buttons:hover {
+    background-color: #8f0000;
+  }
+  
+  .paginate p {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .paginate h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    font-weight: bold;
+  }
+  
