--- a/client/src/components/CSS/SearchBar.module.css
+++ b/client/src/components/CSS/SearchBar.module.css
@@ -1,17 +1,32 @@
+.searchBar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .button{
-    border-radius: 8px;
+  border-radius: 50px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.24em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-  color: #E1E1E1;
+  margin-left: 58px;
+  margin-right: 58px;
+  text-decoration: none;
+  color: #e1e1e1;
+  
+}
+.button:hover {
+  border-color: #646cff;
 }
 
+.button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
 .input{
-    border-radius: 10px;
+    border-radius: 100px;
     background-color: #909090;
 }
