--- a/client/src/components/CSS/Cards.module.css
+++ b/client/src/components/CSS/Cards.module.css
@@ -45,3 +45,27 @@
     border-radius: 15px;
     margin-left: 15px;
 }
+
+.button{
+    border-radius: 50px;
+    border: 1px solid transparent;
+    padding: 0.24em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
+    margin-left: 58px;
+    margin-right: 58px;
+    text-decoration: none;
+    color: #e1e1e1;
+    
+  }
+  .button:hover {
+    border-color: #646cff;
+  }
+  
+  .button:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+  }
