--- a/client/src/components/CSS/Card.module.css
+++ b/client/src/components/CSS/Card.module.css
@@ -6,7 +6,8 @@
   width: 225px;
   height: 200px; /* Relación de aspecto 4:3 (1600x1200) */
   text-align: center;
-  background-color: rgb(0, 0, 0, 0.7);
+  /* background-color: rgb(0, 0, 0, 0.7); */
+  background-image: linear-gradient(-45deg, #7907d66f, #03030370, #012087b0);
   margin: 1rem;
   border-radius: 30px;
 
@@ -21,7 +22,7 @@
 }
 
 .cardContainer:hover {
-  border-color: #646cff;
+  border-color: #8900de;
 }
 
 .cardContainer:focus,
@@ -39,7 +40,7 @@ button:focus-visible {
 
 .nombre {
   font-size: 0.8rem;
-  color: #e1e1e1;
+  color: #039af8;
   margin: 0.2rem auto;
   padding: 0  1em 0 1em
 }
