--- a/client/src/components/CSS/Cards.module.css
+++ b/client/src/components/CSS/Cards.module.css
@@ -1,6 +1,7 @@
 .cardsContainer{
     border: 1px solid black;
-    background-color: rgb(0, 0, 0, 0.3);
+    /* background-color: rgb(0, 0, 0, 0.3); */
+    background-image: linear-gradient(45deg, rgb(7, 7, 7), rgba(0, 0, 0, 0.316), rgba(123, 117, 117, 0.387))
 }
 
 .cards{
