--- a/client/src/components/CSS/Card.module.css
+++ b/client/src/components/CSS/Card.module.css
@@ -7,11 +7,11 @@
   height: 200px; /* Relación de aspecto 4:3 (1600x1200) */
   text-align: center;
   /* background-color: rgb(0, 0, 0, 0.7); */
-  background-image: linear-gradient(-45deg, #7907d66f, #03030370, #012087b0);
+  background-image: linear-gradient(90deg, #272d9dc0, #000000, #7a36abaf );
   margin: 1rem;
   border-radius: 30px;
-
-  border: 1px solid transparent;
+  
+  border: 2px solid rgb(82, 2, 232);
   padding: 0.8em 0.2em 0em;
   font-size: 1em;
   font-weight: 500;
@@ -22,7 +22,7 @@
 }
 
 .cardContainer:hover {
-  border-color: #8900de;
+  border-color: #ad00fcfe;
 }
 
 .cardContainer:focus,
@@ -40,7 +40,7 @@ button:focus-visible {
 
 .nombre {
   font-size: 0.8rem;
-  color: #039af8;
+  color: #f2f2f2;
   margin: 0.2rem auto;
   padding: 0  1em 0 1em
 }
