--- a/client/src/components/CSS/Cards.module.css
+++ b/client/src/components/CSS/Cards.module.css
@@ -1,9 +1,8 @@
 .cardsContainer{
-    border: 1px solid black;
+    border: 1px transparent rgb(255, 0, 238);
     /* background-color: rgb(0, 0, 0, 0.3); */
-    background-image: linear-gradient(45deg, rgb(7, 7, 7), rgba(0, 0, 0, 0.316), rgba(123, 117, 117, 0.387))
+    
 }
-
 .cards{
     display: flex;
     flex-direction: row;
@@ -21,8 +20,8 @@
     border-radius: 200px;
     align-items: center;
     padding: auto;
-    color: #E1E1E1;
-    background-color: rgba(0, 0, 0, 0.686);
+    color: #fffdfd;
+    background-image: linear-gradient(90deg, #272d9dc0, #000000, #7a36abaf );
   
     margin-top: 10px;
 }
@@ -33,7 +32,7 @@
     align-items: center;
     margin-left: 20px;
     margin-right: 20px;
-    background-color: rgba(56, 56, 56, 0.542);
+    background-image: linear-gradient(25deg, rgba(135, 0, 253, 0.279), rgba(96, 96, 96, 0.32), rgba(99, 6, 165, 0.427) );
     border-radius: 200px;
     padding: 5px 15px 8px 15px;
     min-width: 250px;
@@ -41,8 +40,8 @@
 }
 
 .options select{
-    background-color: rgba(49, 49, 49, 0.6);
-    color: white;
+    background-color: rgba(111, 36, 187, 0.43);
+    color: rgb(255, 255, 255);
     border-radius: 15px;
     margin-left: 15px;
 }
@@ -54,13 +53,13 @@
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
+    background-image: linear-gradient(25deg, rgba(4, 8, 254, 0.548), rgba(2, 2, 110, 0.487), #0225c4c4 );
     cursor: pointer;
     transition: border-color 0.25s;
     margin-left: 58px;
     margin-right: 58px;
     text-decoration: none;
-    color: #e1e1e1;
+    color: #fffcfc;
     
   }
   .button:hover {
@@ -69,4 +68,10 @@
   
   .button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
+  }
+
+  .ordenarPor{
+    color: whitesmoke;
+    font-weight: bold;
+    font-size: 1rem;
   }
