--- a/client/src/components/CSS/Detail.module.css
+++ b/client/src/components/CSS/Detail.module.css
@@ -1,96 +1,164 @@
 .detail {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 1rem;
-    margin: 2rem auto;
-    width: 100%;
-    background-color: rgba(0, 0, 62, 0.895);
-    background-blend-mode: lighten;
-    background-size: cover;
-    background-position: center;
-    padding: 1rem;
-    border-radius: 12px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-  }
-  
-  .img {
-    grid-column: 1 / 2;
-    background-size: contain;
-    width: calc(500px * 4 / 3);
-    height: 400px;
-    border-radius: 12px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-  }
-  
-  .img img {
-    width: 100%;
-    height: 100%;
-    border-radius: 12px;
-  }
-  
-  .description {
-    grid-column: 2 / 3;
-    padding: 1rem;
-    background-color: rgb(0, 0, 0, 0.7);
-    border-radius: 8px;
-    font-size: 1rem;
-    line-height: 1.6;
-    color: #E1E1E1;
-  }
-  
-  .extraData {
-    grid-column: 2 / 3;
-    padding: 1rem;
-    background-color: rgb(0, 0, 0, 0.7);
-    border-radius: 8px;
-    font-size: 1rem;
-    color: #E1E1E1;
-  }
-  
-  .nombre {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    color: #fff;
-  }
-  
-  .extraData p {
-    margin: 0.5rem 0;
-  }
-  
-  .tiendas {
-    font-size: 1.1rem;
-    font-weight: bold;
-    color: #444;
-    margin-top: 2rem;
-  }
-  
-  .tiendas ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .tiendas li {
-    margin-bottom: 0.5rem;
-  }
-  
-  .tiendas a {
-    color: #007bff;
-    text-decoration: none;
-  }
-  
-  .tiendas a:hover {
-    text-decoration: underline;
-  }
-  
-  /* Estilos para el enlace "Volver" */
-  .backLink {
-    margin-top: 1rem;
-    color: #007bff;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  .backLink:hover {
-    text-decoration: underline;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 2rem auto;
+  width: 100%;
+  background-color: #29035121;
+  background-blend-mode: lighten;
+  background-size: cover;
+  background-position: center;
+  border-radius: 12px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+.img {
+  background-size: contain;
+  width: calc(300px * 16 / 9);
+  height: 300px;
+  border-radius: 12px;
+  border: 1px solid rgba(95, 2, 255, 0.976);
+}
+
+.img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 40px;
+}
+
+.grupo3 {
+  display: flex;
+  width: 96%;
+
+  justify-content: center;
+}
+.description {
+  border: 2px solid rgb(111, 0, 255);
+  padding: 2rem;
+  background-image: linear-gradient(90deg, #272d9dc0, #000000, #7a36ab62);
+  border-radius: 40px;
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #cecece;
+}
+
+.extraData p {
+  margin: 0.5rem 0;
+}
+
+.tiendas {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: 2px solid rgb(111, 0, 255);
+  width: 70%;
+  align-items: center;
+  background-image: linear-gradient(90deg, #272d9dc0, #000000, #7a36abaf);
+  border-radius: 8px;
+  padding: 1rem;
+  margin: auto;
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #ffffff;
+  font-size: 1.6rem;
+
+  margin-top: 1rem;
+  max-height: 10px;
+}
+
+.tiendas ul {
+  list-style: none;
+  padding: 0;
+}
+
+.tiendas li {
+  margin-bottom: 0.5rem;
+}
+
+.tiendas a {
+  color: #01c6fc;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+.tiendas a:hover {
+  text-decoration: underline;
+}
+
+/* Estilos para el enlace "Volver" */
+.backLink {
+  margin-top: 1rem;
+  color: #cecece;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.backLink:hover {
+  text-decoration: underline;
+}
+
+.grupo2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 90%;
+  margin: auto;
+
+  color: #cecece;
+
+  border-radius: 20px;
+}
+
+.idYnombre {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 4rem;
+  margin-top: 0rem;
+  width: calc(390px * 16 / 9);
+  height: 390px;
+}
+
+.grupoIntermedio {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  gap: 1rem;
+}
+
+.parrafos {
+  display: flex;
+  flex-direction: row;
+
+  background-image: linear-gradient(90deg, #0a0e5fc0, #000000, #3e0c61af);
+  border-radius: 50px;
+  margin-top: 2.9rem;
+  width: 40%;
+  height: 350px;
+  border: 2px solid rgb(111, 0, 255);
+}
+.dataParrafos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 1rem;
+
+  width: 200px;
+
+  max-height: 400px;
+}
+.dataParrafos div {
+  gap: 1px;
+}
+
+.id {
+  margin: 0 auto;
+  color: rgb(3, 145, 253);
+}
+
+.nombre {
+  font-size: 2rem;
+  margin: 0 auto;
+  color: rgb(3, 145, 253);
+}
