--- a/client/src/components/CSS/NavBar.module.css
+++ b/client/src/components/CSS/NavBar.module.css
@@ -1,13 +1,12 @@
 .nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 
   height: 3em;
   width: 100%;
-  background-color: rgb(0, 0, 0, 0.8)
-}
+  background-image: linear-gradient(90deg, #272d9dc0, #000000, #7a36abaf );}
 
 .link {
   border-radius: 50px;
@@ -16,9 +15,9 @@
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-image: linear-gradient(25deg, rgba(4, 8, 254, 0.548), rgba(2, 2, 110, 0.487), #0225c4c4 );
   cursor: pointer;
-  transition: border-color 0.25s;
+  
   margin-left: 58px;
   margin-right: 58px;
   text-decoration: none;
@@ -26,7 +25,7 @@
   
 }
 .link:hover {
-  border-color: #646cff;
+  border-color: #c5c5c5;
 }
 .link:focus,
 button:focus-visible {
