--- a/client/src/components/CSS/SearchBar.module.css
+++ b/client/src/components/CSS/SearchBar.module.css
@@ -10,9 +10,8 @@
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-image: linear-gradient(25deg, rgba(4, 8, 254, 0.548), rgba(2, 2, 110, 0.487), #0225c4c4 );
   cursor: pointer;
-  transition: border-color 0.25s;
   margin-left: 58px;
   margin-right: 58px;
   text-decoration: none;
@@ -20,7 +19,7 @@
   
 }
 .button:hover {
-  border-color: #646cff;
+  border-color: #ffffff;
 }
 
 .button:focus-visible {
@@ -28,5 +27,5 @@
 }
 .input{
     border-radius: 100px;
-    background-color: #909090;
+    background-color: #dcdada;
 }
