--- a/client/src/components/CSS/Detail.module.css
+++ b/client/src/components/CSS/Detail.module.css
@@ -12,18 +12,19 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
-.img {
+.imagen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-size: contain;
-  width: calc(300px * 16 / 9);
-  height: 300px;
-  border-radius: 12px;
-  border: 1px solid rgba(95, 2, 255, 0.976);
+  height: 90%;
+  width: 75%;
+  padding: 1rem;
+  overflow: hidden;
 }
 
-.img img {
-  width: 100%;
+.img {
   height: 100%;
-  border-radius: 40px;
 }
 
 .grupo3 {
@@ -116,8 +117,11 @@
   align-items: center;
   margin-left: 4rem;
   margin-top: 0rem;
-  width: calc(390px * 16 / 9);
-  height: 390px;
+  width: 600px;
+  height: 450px ;
+  background-image: linear-gradient(-90deg, #272d9dc0, #000000, #7a36abaf);
+  border-radius: 60px;
+  border: 2px solid rgb(111, 0, 255);
 }
 
 .grupoIntermedio {
@@ -133,32 +137,47 @@
 
   background-image: linear-gradient(90deg, #0a0e5fc0, #000000, #3e0c61af);
   border-radius: 50px;
-  margin-top: 2.9rem;
-  width: 40%;
-  height: 350px;
+  margin-top: 0.10rem;
+  width: 600px;
+  height: 450px ;
   border: 2px solid rgb(111, 0, 255);
 }
 .dataParrafos {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 1rem;
+  justify-content: center;
 
   width: 200px;
 
   max-height: 400px;
 }
 .dataParrafos div {
-  gap: 1px;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 .id {
   margin: 0 auto;
-  color: rgb(3, 145, 253);
+  color: rgb(255, 179, 0);
 }
 
 .nombre {
+  
+  padding: 1rem;
+  padding-bottom: 1.5rem;
+  border-radius: 200px;
   font-size: 2rem;
   margin: 0 auto;
-  color: rgb(3, 145, 253);
+  color: rgb(253, 251, 249);
+}
+
+.parrafosPGrupo2{
+  padding: 0rem;
+  color: rgb(255, 179, 0);
+  gap: 0;
 }
