--- a/client/src/components/CSS/Paginate.module.css
+++ b/client/src/components/CSS/Paginate.module.css
@@ -16,7 +16,7 @@
     padding: 5px 10px;
     font-size: 14px;
     border: 1px solid black;
-    background-color: rgba(80, 0, 0, 0.934);
+    background-image: linear-gradient(25deg, rgba(31, 80, 225, 0.548),rgba(2, 164, 251, 0.869), #0190e9d3 );
     border-radius: 200px;
     color: #fff;
     
