--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,7 @@ body {
   min-height: 100vh;
   max-height: 100vh;
   margin-top: 0.5em;
-  background-image: url('pxfuel.jpg');
+  background-image: url('/pxfuel.jpg');
   background-repeat:repeat-y;
   background-position: center;
   background-size: cover;
