--- a/client/src/components/CSS/About.module.css
+++ b/client/src/components/CSS/About.module.css
@@ -1,57 +1,119 @@
-.AboutContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    font-size: 2.5rem;
-    width: 40%;
-    margin-left: 30%;
-    margin-right: 30%;
-    background-image: linear-gradient(rgb(132, 0, 255), rgb(4, 5, 105), rgb(7, 97, 104));
-    justify-content: center;
-    border-radius: 60px;
-    margin-top: 3%;
-    padding: 2rem;
-    padding-top: 0px;
-    border: 4px solid rgb(98, 1, 255);
+.AboutContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 70vh;
+  font-size: 4vh;
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 20%;
+  background-image: linear-gradient(
+    rgba(132, 0, 255, 0.568),
+    rgb(4, 5, 105),
+    rgb(7, 97, 104)
+  );
+  justify-content: center;
+  border-radius: 60px;
+  margin-top: 3%;
+  padding: 2rem;
+  padding-top: 0px;
+  border: 4px solid rgb(98, 1, 255);
 }
 
-.tecnologiasContainer{
-    display: flex;
-    flex-direction: row;
-    gap:3rem;
-    background-image: linear-gradient(rgba(5, 179, 223, 0.61), rgba(4, 18, 212, 0.63), rgba(143, 7, 233, 0.425));
-    border-radius: 50px;
-    border: 2px solid rgb(0, 60, 255);
-    padding: 2rem;
+.tecnologiasContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 3vh;
+  background-image: linear-gradient(
+    rgba(5, 179, 223, 0.61),
+    rgba(4, 18, 212, 0.63),
+    rgba(143, 7, 233, 0.425)
+  );
+  border-radius: 50px;
+  border: 0.3vh solid rgb(0, 60, 255);
+  padding: 2vh;
+  width: 46vh;
+  height: 30vh;
 }
 
-.columnasTec{
-    display: flex;
-    flex-direction: column;
-    font-size: 2rem;
-    align-items: center;
-   
+.columnasTec {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 2vh;
+  width: 30%;
 }
 
-.tecnologias{
-    font-size: 1.2rem;
-    padding-top: 2rem;
+.tecnologias {
+  font-size: 2vh;
+  padding-top: 0.5rem;
 }
-.tecnologias img{
-    height: 100px;
-    
+.tecnologias img {
+  height: 9vh;
+  width: auto;
 }
-.parrafo{
-    font-size: 1.5rem;
-    padding-bottom: 2rem;
-}
-
-.express{
-    height: 10px;
+.parrafo {
+  text-align: center;
+  font-size: 2vh;
+  padding-bottom: 0.5rem;
+  width: 55%;
 }
 
-.saludo{
-    margin: 0;
-    padding-bottom: 1rem;
+.saludo {
+  margin: 0.5rem;
+  padding: 0rem;
+}
+
+.henryLogo {
+  height: 1.7vh;
+  margin-left: 0.5rem;
+}
+
+.firstParag {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem;
+}
+
+.shoutout {
+  font-size: 1.8vh;
+  margin-top: 6vh;
+  margin-bottom: 0;
+}
+
+.shoutout a {
+  text-decoration: none;
+  color: rgb(0, 174, 255);
+}
+
+.shoutout a:active {
+  text-decoration: none;
+  color: rgb(0, 174, 255);
+}
+
+.express {
+  background-image: radial-gradient(
+      ellipse at center,
+      rgb(54, 51, 253) 0%,
+      rgba(165, 86, 255, 0.993) 70%
+    ),
+    url("/Expressjs.png"); /* La imagen que se muestra encima del fondo */
+  /* Ajustamos el tamaño de la imagen para que cubra el contenedor */
+  background-size: cover;
+  /* Centramos la imagen en el contenedor */
+  background-position: center;
+  /* Evitamos que la imagen se repita */
+  background-repeat: no-repeat;
+  border-radius: 200px;
+}
+
+.nodeLogo,
+.express {
+  max-height: 6vh;
+}
+
+.footer {
+  font-size: 1.5vh;
 }
