--- a/client/src/components/CSS/Card.module.css
+++ b/client/src/components/CSS/Card.module.css
@@ -3,17 +3,21 @@
 }
 
 .cardContainer {
-  width: 225px;
-  height: 200px; /* Relación de aspecto 4:3 (1600x1200) */
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  width: 25vh;
+  height: 18vh; /* Relación de aspecto 4:3 (1600x1200) */
   text-align: center;
   /* background-color: rgb(0, 0, 0, 0.7); */
   background-image: linear-gradient(90deg, #272d9dc0, #000000, #7a36abaf );
   margin: 1rem;
   border-radius: 30px;
-  
+  gap: 0.5vh;
   border: 2px solid rgb(82, 2, 232);
-  padding: 0.8em 0.2em 0em;
-  font-size: 1em;
+  padding: 1vh 1vh 1vh;
+  font-size: 6vh;
   font-weight: 500;
   font-family: inherit;
   
@@ -25,22 +29,23 @@
   border-color: #ad00fcfe;
 }
 
-.cardContainer:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+
 
 .imagen {
-  width: calc(150px * 4/3);
-  height: 150px;
+  width: calc(18.5vh * 4/3);
+
+  height: 18.5vh;
+  max-height: 18.5vh;
   padding-top: 5px;
   object-fit: cover;
   border-radius: 15px;
+  overflow: hidden;
 }
 
 .nombre {
-  font-size: 0.8rem;
+  font-size: 1.4vh;
   color: #f2f2f2;
-  margin: 0.2rem auto;
-  padding: 0  1em 0 1em
+  margin: 0;
+  padding: 0;
+
 }
