--- a/client/src/components/CSS/Cards.module.css
+++ b/client/src/components/CSS/Cards.module.css
@@ -1,6 +1,9 @@
 .cardsContainer{
     border: 1px transparent rgb(255, 0, 238);
-    /* background-color: rgb(0, 0, 0, 0.3); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     
 }
 .cards{
@@ -8,21 +11,24 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    width: 170vh;
 
 }
 
 .filterOptions{
     display: flex;
-    justify-content: center;
-    height: 40px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: 4.5vh;
     align-items: center;
-    max-width: 97%;
+    width: 150vh;
+    max-width: 180vh;
     border-radius: 200px;
     align-items: center;
-    padding: auto;
+    padding: 0;
     color: #fffdfd;
     background-image: linear-gradient(90deg, #272d9dc0, #000000, #7a36abaf );
-  
+    font-size: 1.4vh;
     margin-top: 10px;
 }
 
@@ -30,20 +36,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 3vh;
+    margin-right: 3vh;
     background-image: linear-gradient(25deg, rgba(135, 0, 253, 0.279), rgba(96, 96, 96, 0.32), rgba(99, 6, 165, 0.427) );
     border-radius: 200px;
     padding: 5px 15px 8px 15px;
-    min-width: 250px;
-    height: 10px;
+    width: 20vh;
+    height: 2vh;
 }
 
 .options select{
-    background-color: rgba(111, 36, 187, 0.43);
+    background-color: rgb(72, 1, 127);
     color: rgb(255, 255, 255);
     border-radius: 15px;
     margin-left: 15px;
+    height: 2.3vh;
+    width: 15vh;
+    font-size: 1.4vh;
 }
 
 .button{
@@ -73,5 +82,5 @@
   .ordenarPor{
     color: whitesmoke;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 2vh;
   }
