--- a/client/src/components/CSS/NavBar.module.css
+++ b/client/src/components/CSS/NavBar.module.css
@@ -1,25 +1,27 @@
 .nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 
-  height: 3em;
+  height: 10%;
   width: 100%;
   background-image: linear-gradient(90deg, #272d9dc0, #000000, #7a36abaf );}
 
 .link {
-  border-radius: 50px;
+  border-radius: 70px;
+
   border: 1px solid transparent;
-  padding: 0.24em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
+  padding: 0.8vh;
+  font-size: 1.9vh;
+
+
+
   background-image: linear-gradient(25deg, rgba(31, 80, 225, 0.548),rgba(2, 164, 251, 0.869), #0190e9d3 );
   cursor: pointer;
   
-  margin-left: 58px;
-  margin-right: 58px;
+  margin-left: 2vh;
+  margin-right: 2vh;
   text-decoration: none;
   color: #e1e1e1;
   
@@ -27,17 +29,30 @@
 .link:hover {
   border-color: #c5c5c5;
 }
-.link:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+
 
 
 .link.active {
   background-color: transparent;
   color: #e1e1e1;
 }
+.derecha{
+  display: flex;
+  flex-direction: row;
+  gap: 3rem;
+  height: 6%;
+  align-items: center;
+  justify-content: center;
 
+ 
+  width: 30%;
+  
+}
+.nombre{
+ 
+  margin-left: 19%;
+  
+}
 
 /* button {
   border-radius: 8px;
